--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-numpy>=2.1.2
-biopython>=1.84
-beautifulsoup4>=4.12.3
-requests>=2.32.3
-rnapolis>=0.4.6
+numpy==2.3.1
+biopython==1.85
+beautifulsoup4==4.13.4
+requests==2.32.4
+rnapolis==0.9.1
