--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,25 +2,25 @@ name: Tests
 
 on:
   push:
-    branches: [ main, master ]
+    branches: [ main ]
   pull_request:
-    branches: [ main, master ]
+    branches: [ main ]
 
 jobs:
   docker-tests:
     name: Docker Tests
     runs-on: ubuntu-latest
-    
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-      
+
     - name: Build Docker image
       run: docker build -t rna-metrics .
-      
+
     - name: Run tests in container
       run: |
-        docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace rna-metrics bash -c "
+        docker run --rm rna-metrics bash -c "
           pip install -r test_requirements.txt &&
           pytest -v
         "
